[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix.workspace = true
tokio.workspace = true
futures-util.workspace = true
tokio-util.workspace = true
clap = { version = "4.2.7", features = ["derive"] }
tokio-tungstenite = "0.18.0"
models = { path = "../models" }
codec = { path="../codec" }