[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
uuid = { version = "1.3.2", features = ["v4"] }
tokio = { version = "1.28.1", features = ["full"] }
futures-util = { version="0.3.17", default-features = false, features = ["std", "sink"] }
tokio-util = "0.7.8"
actix-codec = "0.5.1"
models = { path = "../models" }