[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix.workspace = true
tokio.workspace = true
futures-util.workspace = true
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
uuid = { version = "1.3.2", features = ["v4"] }
tokio-util = "0.7.8"
actix-codec = "0.5.1"
models = { path = "../models" }